[package]
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
description = "Streamlined implementation of todo.txt based on the features, formatting, and plugins that I used."
edition = "2018"
license = "GPL-3.0-only"
name = "t"
version = "0.44.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4.6"
colored = "*"
pico-args = "*"
log = "*"
pretty_env_logger = "*"
