[package]
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
description = "Streamlined implementation of todo.txt based on the features, formatting, and plugins that I used."
edition = "2018"
license = "GPL-3.0-only"
name = "t"
version = "0.53.0"
[dependencies]
anyhow = "1.0"
chrono = "0.4.6"
clap = { version = "4.5.20", features = ["derive"] }
colored = "*"
itertools = "*"
lazy_static = "1.5.0"
log = "*"
pico-args = "*"
pretty_env_logger = "*"
regex = "1.11.1"

[profile.release]
lto="thin"
